--- a/CSS/2-base/_content.scss
+++ b/CSS/2-base/_content.scss
@@ -120,8 +120,8 @@
     margin: 1em auto;
 
     .agent {
-      width: 380px;
       min-width: 320px;
+      max-width: 380px;
       margin: 0 auto;
       img {
         margin: 1.5em 0 0;
@@ -251,6 +251,7 @@ form {
     padding: 1em;
     color: $colorText-2;
     font-size: 2rem;
+    line-height: 1em;
 
     margin: 1em 0 1.2em;
 
