--- a/CSS/3-queries/_queries-screen.scss
+++ b/CSS/3-queries/_queries-screen.scss
@@ -49,6 +49,12 @@
       padding: 1em;
     }
   }
+
+  #IDX--section {
+    .content {
+      margin: 0;
+    }
+  }
 }
 
 @media screen and (max-width: 890px) {
