--- a/CSS/2-base/_footer.scss
+++ b/CSS/2-base/_footer.scss
@@ -92,6 +92,7 @@ footer {
       li {
         margin-bottom: 1em;
         font-size: 1.5em;
+        text-align: center;
 
         span {
           font-size: 1.6em;
