--- a/CSS/3-queries/_queries-screen.scss
+++ b/CSS/3-queries/_queries-screen.scss
@@ -26,7 +26,7 @@
 
       flex-wrap: wrap;
       top: unset;
-      bottom: 190px;
+      bottom: 5.5em;
       left: 0;
       justify-content: center;
 
