--- a/CSS/3-queries/_queries-screen.scss
+++ b/CSS/3-queries/_queries-screen.scss
@@ -26,15 +26,15 @@
 
       flex-wrap: wrap;
       top: unset;
-      bottom: 5.5em;
+      bottom: 7em;
       left: 0;
       justify-content: center;
 
-      margin: 1em auto;
+      margin: 0 auto;
     }
 
     .rr--logo {
-      bottom: 6.8rem;
+      bottom: 6.8em;
       right: 0;
       left: 0;
       margin-right: auto;
