--- a/CSS/0-helpers/_mixins.scss
+++ b/CSS/0-helpers/_mixins.scss
@@ -1,5 +1,5 @@
+// HOVER AND CLICKED SVG'S
 @mixin svg--a($margin, $fontSize, $color-1, $color-2) {
-
   a:link,
   a:visited {
     text-decoration: none;
@@ -16,26 +16,13 @@
   }
 }
 
-@mixin anchor($color-1 : $hlColor-1_1, $color-2 : $hlColor-1_2) {
-
+// HOVER AND CLICKED ANCHORS
+@mixin anchor($color-1: $hlColor-1_1, $color-2: $hlColor-1_2) {
   &:any-link {
     position: relative;
     text-decoration: none;
     color: $color-1;
     z-index: 1;
-
-    &::after {
-      content: "";
-      position: absolute;
-      background: currentColor;
-      transform: scaleX(0);
-      left: 0;
-      bottom: -8px;
-      width: 100%;
-      height: 2px;
-      transform-origin: right;
-      transition: transform 250ms ease-in;
-    }
   }
 
   &:hover,
@@ -43,16 +30,11 @@
   &:focus {
     outline: none;
     color: $color-2;
-
-    &::after {
-      // transform: scaleX(1);
-      transform-origin: left;
-    }
   }
 }
 
+// HOVER AND CLICKED ANCHORS IN BLOG SECTION
 @mixin blog--anchor {
-
   a:link,
   a:visited {
     text-decoration: none;
@@ -63,7 +45,6 @@
     .blog--img {
       box-shadow: 5px 5px 10px -5px rgba(0, 0, 0, 1);
     }
-
   }
 
   a:hover,
@@ -89,8 +70,6 @@
     // height: 95%;
   }
 }
-
-
 
 // SHADOWS
 
@@ -119,8 +98,4 @@
   border-radius: $border-radius;
   position: absolute;
   z-index: -2;
-}
-
-@mixin background($location) {
-  background: url($location);
 }
