--- a/CSS/2-base/_content.scss
+++ b/CSS/2-base/_content.scss
@@ -3,6 +3,7 @@
   grid-column: 2/3;
   justify-items: center;
   margin: auto;
+  width: 100%;
 
   p {
     text-align: center;
@@ -43,6 +44,12 @@
       transform: rotate(45deg);
     }
   }
+
+  .subtext {
+    color: $colorText-1;
+    font-size: 2em;
+    margin-bottom: 0;
+  }
 }
 
 // WELCOME
@@ -58,11 +65,6 @@
     #welcome--img {
       display: block;
       margin: 1em auto -0.5em;
-    }
-
-    p {
-      color: $colorText-1;
-      font-size: 2.2em;
     }
 
     .welcome--container {
@@ -146,8 +148,9 @@
       .bio {
         @include shadow--container();
         border-radius: 20px;
-        width: 300px;
-        height: 380px;
+        width: 400px;
+        height: 460px;
+        padding: 1em;
         font-style: italic;
         color: $colorText-2;
 
@@ -162,6 +165,7 @@
         left: 0;
         right: 0;
         margin: 1em auto;
+        line-height: 1.2em;
       }
     }
   }
@@ -170,7 +174,6 @@
 // WHY US
 #why--us--section {
   box-sizing: border-box;
-
   .why--us {
     margin-top: -4em;
     display: flex;
@@ -195,7 +198,7 @@
         font-size: 3em;
         width: 320px;
         height: 200px;
-        margin-bottom: 1em;
+        margin-bottom: 0em;
       }
 
       .why--us--box--p {
@@ -222,8 +225,7 @@
 
 // CONTACT US FORM
 #contact--form--section {
-  color: $colorText-1;
-  font-size: 2rem;
+  // nothing to see here
 }
 
 form {
